Fix navbar overlap. Cleanup

--- a/style.css
+++ b/style.css
@@ -6,3 +6,7 @@
 textarea {
     margin: 10px 0px;
 }
+
+body {
+    padding-top: 70px;
+}
